fix but with overflow modal / scroll

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,8 @@
 .mainApp {
   width: 100%;
   min-height: 100vh;
-
   background-color: var(--main-color);
+  transition: all 0.5s ease-out;
 }
 
 /*  themes */
