--- a/src/components/Tasks/TasksButtonAdd.module.css
+++ b/src/components/Tasks/TasksButtonAdd.module.css
@@ -16,6 +16,7 @@
   opacity: 0.8;
   margin-top: 12px;
   border: 2px dashed rgba(255, 255, 255, 0.74);
+  transition: all 0.3s ease-out;
 }
 
 .addButton:hover {
