--- a/src/components/TemplateList/TemplateList.module.css
+++ b/src/components/TemplateList/TemplateList.module.css
@@ -28,6 +28,9 @@
   font-style: italic;
   color: #ffffff;
 }
+h1 {
+  color: #ffffff;
+}
 
 /* ///// LAPTOP / DESKTOP */
 @media (max-width: 1500px) {
