--- a/src/components/Timer/Timer.module.css
+++ b/src/components/Timer/Timer.module.css
@@ -5,4 +5,5 @@
   padding: 30px 0px 30px;
   margin-top: 15px;
   max-width: 480px;
+  transition: all 0.3s ease-out;
 }
