--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ html {
   padding: 0;
   margin: 0;
   position: relative;
-  overflow-x: hidden;
 }
 
 *,
@@ -108,6 +107,7 @@ li {
 body {
   box-sizing: border-box;
   margin: 0;
+  overflow: auto;
   padding: 0;
   font-family: "Nunito Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
